--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Patrick+Hand');
+
+$backgroundColor: #f0f0f0;
 * {
   margin: 0;
   padding: 0;
 }
 
 html, body {
-  background-color: #f0f0f0;
+  background-color: $backgroundColor;
+  font-family: 'Patrick Hand', cursive;
 }
 
 .App {
@@ -31,6 +35,7 @@ html, body {
     left: 0;
     width: 100%;
     height: 500px;
+    text-align: center;
 
     h1 {
       text-align: center;
@@ -39,15 +44,36 @@ html, body {
   }
 
   .pratterino-image {
+    position: absolute;
+    background: linear-gradient(to left, rgba(0, 0, 0, 0), $backgroundColor), url("./assets/pratterino.jpg");
     opacity: .45;
     top: 0;
     bottom: 0;
-    position: absolute;
+    right: 0;
     height: 100%;
     width: 50%;
-    right: 0;
     display: block;
     background-size: contain;
-    background: url("./assets/pratterino.jpg");
+  }
+
+  .skill {
+    text-align: center;
+    margin: 4px;
+    display: inline-block;
+    background: #62dafb;
+    border-radius: 4px;
+    padding: 2px;
+
+    &:hover {
+      background: #4dabb5;
+    }
+  }
+
+  footer {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    text-align: right;
+    padding: 20px;
   }
 }
