--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ $backgroundColor: #f0f0f0;
 html, body {
   background-color: $backgroundColor;
   font-family: 'Patrick Hand', cursive;
+  height: 100%;
 }
 
 .App {
@@ -50,7 +51,7 @@ html, body {
     top: 0;
     bottom: 0;
     right: 0;
-    height: 100%;
+    height: 100vh;
     width: 50%;
     display: block;
     background-size: contain;
@@ -66,6 +67,21 @@ html, body {
 
     &:hover {
       background: #4dabb5;
+    }
+  }
+
+  .games-container {
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    display: block;
+
+    a.game {
+      margin: 4px;
+      display: inline-block;
+      background: #ea5251;
+      border-radius: 4px;
+      padding: 2px;
     }
   }
 
