--- a/src/About.scss
+++ b/src/About.scss
@@ -2,34 +2,7 @@ $backgroundColor: #f06b65;
 $padding: 20px;
 $fontColor: #f8f8f8;
 
-* {
-  font-family: 'Cormorant', serif;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  color: $fontColor;
-  text-decoration: none;
-  box-shadow: inset 0 -0.05em white,
-  inset 0 -0.1em $backgroundColor,
-  inset 0 -0.15em $fontColor,
-}
-
-html, body {
-  background: $backgroundColor;
-  font-family: 'Gochi Hand', cursive;
-  font-size: 15pt;
-}
-
-.App {
-  @media (min-width: 768px) {
-    section {
-      flex: 1 1;
-    }
-  }
-
+.About {
   section {
     flex: 1 0;
     min-height: 100vh;
