--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,4 +1,4 @@
-$backgroundColor: #f06b65;
+$backgroundColor: #FE634E;
 $padding: 20px;
 $fontColor: #f8f8f8;
 
@@ -47,7 +47,7 @@ html, body {
   font-weight: 400;
 
   .content {
-    font-size: 20px;
+    font-size: 24px;
     padding: $padding;
     display: flex;
     align-items: center;
