--- a/src/about/About.scss
+++ b/src/about/About.scss
@@ -3,6 +3,11 @@ $padding: 20px;
 $fontColor: #f8f8f8;
 
 .About {
+  hr {
+    margin: $padding 0;
+    border: 1px solid rgba(248, 248, 248, 0.25);
+  }
+
   section {
     flex: 1 0;
     min-height: 100vh;
